# universalRobots

./: README.md
surfr_core/: CMakeLists.txt  DEPENDENCIES  ethernet2_plugin.xml  nodelet_plugin.xml  package.xml  serial_plugin.xml
surfr_core/OLD/: Ethernet.cpp  Ethernet.h  core.h.bak  ethernet_plugin.xml
surfr_core/config/: rosconsole_debug.config  rosconsole_nodebug.config
surfr_core/include/surfr_core/: Base.h  StateMachine.h  core.h  datatypes.h
surfr_core/include/surfr_core/comm/: Ethernet.h  Ethernet2.h  Serial.h  comm.h
surfr_core/include/surfr_core/core/: funcs.h  headers.h  macros.h  templates.h  types.h
surfr_core/include/surfr_core/dev/: Camera.h  Manipulator.h
surfr_core/include/surfr_core/filters/: Filter.h  FilterBase.h  Iir2.h
surfr_core/include/surfr_core/node/: Node.h  Nodelet.h
surfr_core/include/surfr_core/planners/: Order1Angular.h  Order1Linear.h  Order1Pose.h  Planner.h  PlannerBase.h
surfr_core/launch/: socket_input.launch  socket_output.launch  start.launch
surfr_core/src/: Base.cpp  StateMachine.cpp  core.cpp.bak
surfr_core/src/comm/: Ethernet.cpp  Ethernet2.cpp  Serial.cpp
surfr_core/src/core/: funcs.cpp
surfr_core/src/dev/: Camera.cpp  Manipulator.cpp
surfr_core/src/filters/: Filter.cpp  FilterBase.cpp  Iir2.cpp
surfr_core/src/node/: Node.cpp  Nodelet.cpp  main_device.cpp  main_socket.cpp
surfr_core/src/planners/: Order1Angular.cpp  Order1Linear.cpp  Order1Pose.cpp  Planner.cpp
surfr_core/yaml/: Ethernet.yaml  comm.yaml.old  dev.yaml.old  filters.yaml  planners.yaml
surfr_msgs/: CMakeLists.txt  package.xml
surfr_msgs/msg/: Joint.msg  Matrix.msg  Quaternion.msg
surfr_msgs/srv/: Calibration.srv  State.srv  cmd_boolean.srv  cmd_double.srv  cmd_integer.srv  cmd_string.srv  cmd_unsigned.srv  cmd_vector.srv
surfr_urx/surfr_urx/: CMakeLists.txt  package.xml
surfr_urx/ur10_moveit/: CMakeLists.txt  package.xml
surfr_urx/ur10_moveit/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ur10.srdf
surfr_urx/ur10_moveit/launch/: demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
surfr_urx/ur3_moveit/: CMakeLists.txt  package.xml
surfr_urx/ur3_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur3.srdf
surfr_urx/ur3_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
surfr_urx/ur5_moveit/: package.xml
surfr_urx/ur5_moveit/config/: ur5.srdf
surfr_urx/ur5_moveit/launch/: planning_context.launch  warehouse.launch
surfr_urx/urx_description/: CMakeLists.txt  package.xml
surfr_urx/urx_description/launch/: ur10_upload.launch  ur3_upload.launch  ur5_upload.launch
surfr_urx/urx_description/urdf/: ur10.urdf.xacro  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf.xacro  ur3.urdf.xacro  ur3_joint_limited_robot.urdf.xacro  ur3_robot.urdf.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
surfr_urx/urx_driver/: CMakeLists.txt  device_plugin.xml  package.xml
surfr_urx/urx_driver/include/urx_driver/: DeviceURx.h
surfr_urx/urx_driver/launch/: init.launch  init_nodelet.launch  moveit_hydro.launch  moveit_indigo.launch  ur10_simulator.launch  ur3_simulator.launch  ur5_simulator.launch
surfr_urx/urx_driver/matlab/: cb_pose.m  ur3_end.m  ur3_ini.m  ur3_read.m
surfr_urx/urx_driver/src/: DeviceURx.cpp
surfr_urx/urx_driver/urdf/: ur10.srdf  ur10.urdf.xacro  ur10_robot.urdf.xacro  ur3.srdf  ur3.urdf.xacro  ur3_robot.urdf  ur3_robot.urdf.xacro  ur5.srdf  ur5.urdf.xacro  ur5_robot.urdf.xacro  urx.rviz
surfr_urx/urx_driver/yaml/: filters.yaml  inputs.yaml  kinematics.yaml  outputs.yaml  planners.yaml  services.yaml  settings.yaml
