<?xml version="1.0"?>
<package format="2">
  <name>surfr_msgs</name>
  <version>0.1.2</version>
  <description>
    This basic package contains the main messages handled by topics within the
    InnLab nodes. Please visit the documentation for a full description of each
    of these messages.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="ebauzano@uma.es">Enrique Bauzano</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://www.uma.es/medical-robotics</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="ebauzano@uma.es">Enrique Bauzano</author>


  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Build tool package -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Required for custom messages -->
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <!-- Packages needed at compile and/or run time -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>image_transport</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
